--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -661,6 +661,7 @@
         <div class="roundCircle2">
             <div class="productDisplay">
                 <img src="{%static 'Raul/Images/Raul Website/Photo May 20, 5 03 10 PM.jpg' %}">
+                <a href="{% url 'sec-view' 'Shopping The Layout' %}" ></a>
                 <p>confetti plate</p>
                 <h6>$120.00</h6>
             </div>
@@ -702,7 +703,7 @@
             <div></div>
             <div class="secondSection">
                 <div class = "textHover">
-                  
+
                     <a href="{% url 'sec-view' 'Pot Collection' %}">  <div class = "textHeading"> shop this collection </div></a>
                 </div>
             </div>
