--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class ="totalSummaryColumn2">
                     <h2>${{ order.sub_total}}</h2>
-                    <h2>$5.00</h2>
+                    <h2>{{order.Shipping}}</h2>
                     <h2>${{ order.tax_total}}</h2>
                 </div>
             </div>
