--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -411,14 +411,20 @@
 
     <div class="furniture" id ="FurnitureSec">
         <div class="shopBack">
-            <div class="furnitureHeading">                
+            <div class="furnitureHeading">
                 <span>FURNITURE</span>
-                <a href="{%url 'login' %}">see more</a>  
+                <a href="{% url 'sec-view' 'Furniture' %}">see more</a>
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/1.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+
+
+                <a href="{% url 'sec-view' 'Furniture' %}">
+                    <img src="{%static 'Raul/Images/1.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
+                <a href="{% url 'sec-view' 'Furniture' %}">
+                    <img src="{%static 'Raul/Images/2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
             </div>
         </div>
     </div>
@@ -427,12 +433,16 @@
         <div class="shopBack" id="lighting">
             <div class="furnitureHeading">
                 <span>LIGHTING</span>
-                <a href="{%url 'login' %}">see more</a>  
+                <a href="{% url 'sec-view' 'Lighting' %}">see more</a>
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/3.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/4.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <a href="{% url 'sec-view' 'Lighting' %}">
+                    <img src="{%static 'Raul/Images/3.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
+                <a href="{% url 'sec-view' 'Lighting' %}">
+                    <img src="{%static 'Raul/Images/4.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
             </div>
         </div>
     </div>
@@ -441,12 +451,16 @@
         <div class="shopBack" id="flower">
             <div class="furnitureHeading">
                 <span>FLORAL</span>
-                <a href="{%url 'login' %}">see more</a>  
+                <a href="{% url 'sec-view' 'Floral' %}">see more</a>
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/6.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <a href="{% url 'sec-view' 'Floral' %}">
+                    <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
+                <a href="{% url 'sec-view' 'Floral' %}">
+                    <img src="{%static 'Raul/Images/6.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
             </div>
         </div>
     </div>
@@ -455,12 +469,16 @@
         <div class="shopBack" id="table">
             <div class="furnitureHeading">
                 <span>TABLETOP</span>
-                <a href="{%url 'login' %}">see more</a>  
+                <a href="{% url 'sec-view' 'Tabletop' %}">see more</a>
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/7.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/8.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <a href="{% url 'sec-view' 'Tabletop' %}">
+                    <img src="{%static 'Raul/Images/7.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
+                <a href="{% url 'sec-view' 'Tabletop' %}">
+                    <img src="{%static 'Raul/Images/8.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
             </div>
         </div>
     </div>
@@ -469,32 +487,39 @@
         <div class="shopBack" id="wall">
             <div class="furnitureHeading">
                 <span> WALLART </span>
-                <a href="{%url 'login' %}">see more</a>  
+                <a href="{% url 'sec-view' 'Wallart' %}">see more</a>
             </div>
 
             <div class ="furnitureImages" id ="DecorativeSec">
-                <img src="{%static 'Raul/Images/9.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/10.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <a href="{% url 'sec-view' 'Wallart' %}">
+                    <img src="{%static 'Raul/Images/9.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
+                <a href="{% url 'sec-view' 'Wallart' %}">
+                    <img src="{%static 'Raul/Images/10.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
             </div>
         </div>
     </div>
 
     <div class="furniture" id ="DecorativeSec">
         <div class="shopBack" id="decorative">
-            <div class="furnitureHeading">                
+            <div class="furnitureHeading">
                 <span>DECORATIVE</span>
-                <a href="{%url 'login' %}">see more</a>  
+                <a href="{% url 'sec-view' 'Decorative' %}">see more</a>
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/11.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <a href="{% url 'sec-view' 'Decorative' %}">
+                    <img src="{%static 'Raul/Images/11.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
+                <a href="{% url 'sec-view' 'Decorative' %}">
+                    <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                </a>
             </div>
         </div>
     </div>
 
     <div class="filler" id ="borderBottom"></div>
-    ]
 
     <div class="horizontalScroll" id="shop">
         <div class ="featureProductsHeading" >
