--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -58,7 +58,7 @@
             <div class ="menuGrid">
                 <div class="menuSections">
                     <div class ="menuItems">
-                        <h1>Organic Blend</h1>
+                        <p>____Organic Blend_____</p>
                         <p></p>
                     </div>
                     <div class="menuItems">
@@ -77,7 +77,7 @@
                 <div class="menuSections">
                     
                     <div class="menuItems">
-                         <h1>Expresso Blend</h1>
+                         <p> ____EXPRESSO_BLEND_____</p>
                     </div>
                     <div class="menuItems">
                         <p>Espresso ...... 2.75</p>
@@ -108,7 +108,7 @@
                 <div class="menuSections">
                     
                     <div class="menuItems">
-                        <h1> Drinks</h1>
+                        <p> ____Drinks_____</p>
                     </div>
                     <div class="menuItems">
                         <p>Chai Latte ...... 4.25</p>
@@ -133,7 +133,7 @@
                 <div class="menuSections">
                     
                     <div class="menuItems">
-                        <h1>Extras</h1>
+                        <p> ____Extras_____</p>
                     </div>
                     <div class="menuItems">
                         <p>Flavors:Vanilla, Hazelnut,Carmel ...... 2.50</p>
@@ -144,10 +144,91 @@
                     <div class="menuItems">
                         <p>Espresso Shot ...... 2.50</p>
                     </div>
-                    
                 </div>
             </div>           
         </div>
+
+
+        <div class="menuHead">
+            <h1>
+                Wine Menu
+            </h1>
+            <div class ="menuGrid">
+                <div class="menuSections">
+                    <div class ="menuItems">
+                        <p>____Red_____</p>
+                        <p></p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Alamand, Malbec ...... 7.20  24.50</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Haden Fig, Pinot Noir ...... 3.00  3.75</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Joey Tensley, Cabernet Sauvignon ...... 7.80  26.00</p>
+                    </div>
+                </div>
+                <div class="menuSections">
+
+                    <div class="menuItems">
+                        <p> ____White_____</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Phillipe Raimbault, Sauvignon Blanc ...... 8.10  27.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Lubanzi, Chenin blanc ...... 6.90  22.50</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Poco a Poco, Chardonnay ...... 7.80  25.50</p>
+                    </div>
+
+                </div>
+                <div class="menuSections">
+
+                    <div class="menuItems">
+                        <p> ____Rose_____</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Chateau Pigoudet, Classique ...... 7.20  24.00</p>
+                    </div>
+
+                </div>
+                <div class="menuSections">
+
+                    <div class="menuItems">
+                        <p> ____Prosecco_____</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Faghar Le Colture, Brut ...... 7.80  23.00</p>
+                    </div>
+                </div>
+                <div class="menuSections">
+
+                    <div class="menuItems">
+                        <p> ____Mimosa_____</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Beer ...... 8.00  38.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Corona ...... 4.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Dos Equis ...... 4.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Lagunitas IPA ...... 4.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Stella Artois...... 4.00</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </div>
     <div class="sections1" id = "parallax">
     </div>
