home pics iphone x

--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -420,32 +420,15 @@
 
 
                 <a href="{% url 'sec-view' 'Furniture' %}">
-                    <img src="{%static 'Raul/Images/1.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{% static 'Raul/Images/FurnitureCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
                 <a href="{% url 'sec-view' 'Furniture' %}">
-                    <img src="{%static 'Raul/Images/2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{%static 'Raul/Images/Furniture2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
             </div>
         </div>
     </div>
 
-    <div class="furniture" id ="LightingSec">
-        <div class="shopBack" id="lighting">
-            <div class="furnitureHeading">
-                <span>LIGHTING</span>
-                <a href="{% url 'sec-view' 'Lighting' %}">see more</a>
-            </div>
-
-            <div class ="furnitureImages">
-                <a href="{% url 'sec-view' 'Lighting' %}">
-                    <img src="{%static 'Raul/Images/3.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
-                <a href="{% url 'sec-view' 'Lighting' %}">
-                    <img src="{%static 'Raul/Images/4.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
-            </div>
-        </div>
-    </div>
 
     <div class="furniture" id ="FlowerSec">
         <div class="shopBack" id="flower">
@@ -456,10 +439,10 @@
 
             <div class ="furnitureImages">
                 <a href="{% url 'sec-view' 'Floral' %}">
-                    <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{% static 'Raul/Images/FloralCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
                 <a href="{% url 'sec-view' 'Floral' %}">
-                    <img src="{%static 'Raul/Images/6.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{%static 'Raul/Images/Floral2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
             </div>
         </div>
@@ -474,10 +457,10 @@
 
             <div class ="furnitureImages">
                 <a href="{% url 'sec-view' 'Tabletop' %}">
-                    <img src="{%static 'Raul/Images/7.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{% static 'Raul/Images/TabletopCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
                 <a href="{% url 'sec-view' 'Tabletop' %}">
-                    <img src="{%static 'Raul/Images/8.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{%static 'Raul/Images/Tabletop2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
             </div>
         </div>
@@ -492,10 +475,10 @@
 
             <div class ="furnitureImages" id ="DecorativeSec">
                 <a href="{% url 'sec-view' 'Wallart' %}">
-                    <img src="{%static 'Raul/Images/9.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{% static 'Raul/Images/WallArtCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
                 <a href="{% url 'sec-view' 'Wallart' %}">
-                    <img src="{%static 'Raul/Images/10.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{%static 'Raul/Images/WallArt2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
             </div>
         </div>
@@ -510,7 +493,7 @@
 
             <div class ="furnitureImages">
                 <a href="{% url 'sec-view' 'Decorative' %}">
-                    <img src="{%static 'Raul/Images/11.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                    <img src="{% static 'Raul/Images/DecoAcc.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
                 </a>
                 <a href="{% url 'sec-view' 'Decorative' %}">
                     <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
