--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -40,7 +40,7 @@
                 <img src= "{%static 'Raul_Inc/Images/cafe.png' %}">
                 <div class="menuButton">
                     <button>
-                        Order Now
+                        <a href = "https://www.grubhub.com/restaurant/cafe-flor-218-8th-ave-new-york/2201348">Order Now</a>
                     </button>
                     <button>
                         <a href = "#scrollHere">See Our Menu</a>
