--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -222,7 +222,7 @@
                 </div>
             </div>
             
-            <p class="dropDownButton"><a href="{% url 'venue' %}">Venue Bookings</a></p>
+            <p class="dropDownButton">Venue Bookings</a></p>
 
 
         </div>
