--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -411,39 +411,42 @@
 
     <div class="furniture" id ="FurnitureSec">
         <div class="shopBack">
-            <div class="furnitureHeading">
+            <div class="furnitureHeading">                
                 <span>FURNITURE</span>
-                <a href="{% url 'sec-view' 'Furniture' %}">see more</a>
+                <a href="{%url 'login' %}">see more</a>  
             </div>
 
             <div class ="furnitureImages">
-
-
-                <a href="{% url 'sec-view' 'Furniture' %}">
-                    <img src="{% static 'Raul/Images/FurnitureCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
-                <a href="{% url 'sec-view' 'Furniture' %}">
-                    <img src="{%static 'Raul/Images/Furniture2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
+                <img src="{%static 'Raul/Images/1.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
 
+    <div class="furniture" id ="LightingSec">
+        <div class="shopBack" id="lighting">
+            <div class="furnitureHeading">
+                <span>LIGHTING</span>
+                <a href="{%url 'login' %}">see more</a>  
+            </div>
+
+            <div class ="furnitureImages">
+                <img src="{%static 'Raul/Images/3.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/4.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+            </div>
+        </div>
+    </div>
 
     <div class="furniture" id ="FlowerSec">
         <div class="shopBack" id="flower">
             <div class="furnitureHeading">
                 <span>FLORAL</span>
-                <a href="{% url 'sec-view' 'Floral' %}">see more</a>
+                <a href="{%url 'login' %}">see more</a>  
             </div>
 
             <div class ="furnitureImages">
-                <a href="{% url 'sec-view' 'Floral' %}">
-                    <img src="{% static 'Raul/Images/FloralCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
-                <a href="{% url 'sec-view' 'Floral' %}">
-                    <img src="{%static 'Raul/Images/Floral2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
+                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/6.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -452,16 +455,12 @@
         <div class="shopBack" id="table">
             <div class="furnitureHeading">
                 <span>TABLETOP</span>
-                <a href="{% url 'sec-view' 'Tabletop' %}">see more</a>
+                <a href="{%url 'login' %}">see more</a>  
             </div>
 
             <div class ="furnitureImages">
-                <a href="{% url 'sec-view' 'Tabletop' %}">
-                    <img src="{% static 'Raul/Images/TabletopCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
-                <a href="{% url 'sec-view' 'Tabletop' %}">
-                    <img src="{%static 'Raul/Images/Tabletop2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
+                <img src="{%static 'Raul/Images/7.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/8.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -470,39 +469,32 @@
         <div class="shopBack" id="wall">
             <div class="furnitureHeading">
                 <span> WALLART </span>
-                <a href="{% url 'sec-view' 'Wallart' %}">see more</a>
+                <a href="{%url 'login' %}">see more</a>  
             </div>
 
             <div class ="furnitureImages" id ="DecorativeSec">
-                <a href="{% url 'sec-view' 'Wallart' %}">
-                    <img src="{% static 'Raul/Images/WallArtCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
-                <a href="{% url 'sec-view' 'Wallart' %}">
-                    <img src="{%static 'Raul/Images/WallArt2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
+                <img src="{%static 'Raul/Images/9.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/10.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
 
     <div class="furniture" id ="DecorativeSec">
         <div class="shopBack" id="decorative">
-            <div class="furnitureHeading">
+            <div class="furnitureHeading">                
                 <span>DECORATIVE</span>
-                <a href="{% url 'sec-view' 'Decorative' %}">see more</a>
+                <a href="{%url 'login' %}">see more</a>  
             </div>
 
             <div class ="furnitureImages">
-                <a href="{% url 'sec-view' 'Decorative' %}">
-                    <img src="{% static 'Raul/Images/DecoAcc.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
-                <a href="{% url 'sec-view' 'Decorative' %}">
-                    <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                </a>
+                <img src="{%static 'Raul/Images/11.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
 
     <div class="filler" id ="borderBottom"></div>
+    ]
 
     <div class="horizontalScroll" id="shop">
         <div class ="featureProductsHeading" >
