--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -640,6 +640,7 @@
         </div>
     </div>
 
+    <div class="filler" id ="borderBottom"></div>
     <div class="filler"></div>
 
     <div class ="featureProductsHeading" >
@@ -684,8 +685,8 @@
         </div>
     </div>
 
+    <div class="filler" id ="borderBottom"></div>
     <div class="filler"></div>
-
     <div class ="featureProductsHeading" >
         shop by collection
     </div>
